--- a/templates/suggest.html
+++ b/templates/suggest.html
@@ -115,14 +115,14 @@
                     <label for="fooddesc">Food Description</label>
                     <input type="text" id="fooddesc" name="fooddesc" required />
                 </div>
-                <div class="form-group">
-                    <label for="calories">Calories</label>
-                    <input type="text" id="calories" name="calories" required />
-                </div>
-
                 <div>
                     <h4>Please fill out the following details if possible</h4>
                 </div>
+                <div class="form-group">
+                    <label for="calories">Calories</label>
+                    <input type="text" id="calories" name="calories" />
+                </div>
+
                 <div class="form-group-macro">
                     <label for="email">Carbs</label>
                     <input type="number" id="Carbs" name="Carbs" />
