--- a/templates/homepage_refreshing.html
+++ b/templates/homepage_refreshing.html
@@ -227,55 +227,19 @@
             font-size: 1rem;
         }
 
-        .msg-button{
+        .msg-button {
             display: flex;
             justify-content: space-between;
             align-content: center;
             margin: 0 auto;
         }
 
-        .progress-msg{
+        .progress-msg {
+            font-size: 21px;
+            text-align: center;
             margin: auto;
             width: 40%;
-        }
-
-        .refresh {
-            display: flex;
-            justify-content: right;
-        }
-
-        .refreshbutton {
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            color: white;
-            margin-left: 40%;
-            background-color: #57b837;
-            font-weight: 500;
-            border-radius: 0.5rem;
-            font-size: 1rem;
-            line-height: 2rem;
-            padding-left: 1rem;
-            padding-right: 1rem;
-            padding-top: 0.7rem;
-            padding-bottom: 0.7rem;
-            cursor: pointer;
-            text-align: center;
-            margin-right: 0.5rem;
-            display: inline-flex;
-            align-items: center;
-            border: none;
-            float: right;
-        }
-
-        .refreshbutton:hover {
-            background-color: #448e2b;
-        }
-
-        .refreshbutton svg {
-            display: inline;
-            width: 1.8rem;
-            height: 1.8rem;
-            margin-right: 0.75rem;
-            color: white;
+            font-weight: bold;
         }
 
 
@@ -1085,22 +1049,11 @@
                         }}</span><br>
                 </div>
             </div>
-    </div>
-    <div class="msg-button">
-        <span class="progress-msg"></span>
-        <button class="refreshbutton" onclick="refresh_rings()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                class="bi bi-arrow-repeat" viewBox="0 0 16 16">
-                <path
-                    d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z">
-                </path>
-                <path fill-rule="evenodd"
-                    d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z">
-                </path>
-            </svg>
-            Refresh
-        </button>
-    </div>
+        </div>
+        <div class="msg-button">
+            <span class="progress-msg"></span>
+
+        </div>
     </div>
 
     <div class="container">
@@ -1579,7 +1532,7 @@
             calpercent = (caloriesEaten / caloriesToEat) * 100;
             if (calpercent === 0) {
                 cal_msg[0].textContent = "Uh Oh! You haven't entered any food data";
-            } 
+            }
             else if (calpercent > 0 && calpercent <= 30) {
                 cal_msg[0].textContent = "Remember to eat healthy!";
             }
@@ -1592,13 +1545,13 @@
             else if (calpercent > 60 && calpercent <= 90) {
                 cal_msg[0].textContent = "Don't give up!";
             }
-            else if (calpercent > 90 && calpercent <=99) {
+            else if (calpercent > 90 && calpercent <= 99) {
                 cal_msg[0].textContent = "Almost there!";
             }
-            else if(calpercent > 99 && calpercent <=102){
-                cal_msg[0].textContent="You've reached today's calorie goal!"
+            else if (calpercent > 99 && calpercent <= 102) {
+                cal_msg[0].textContent = "You've reached today's calorie goal!"
             }
-            else{
+            else {
                 cal_msg[0].textContent = "Oh no! You've eaten too many calories"
             }
         }
